# seme-cerema

./: .gitignore  CMakeLists.txt  README.md
Article/: article.tex
Talks/: cecile.tex  codeIntroLaplacian2.cpp  implementation.tex  modele.tex  presentation.tex  presentation_Liza.tex
src/: CMakeLists.txt  acoustic-vecpropagation.geo  acoustic.geo  acoustic3d.geo  acoustic_simulation.cfg  acousticmodel.cpp  acousticmodel.hpp  main_acoustic_simulation.cpp  seme-acoustic-fe.cfg  seme-acoustic-fe.cpp  seme-acoustic.cfg  seme-acoustic.cpp  transport-equation.cfg  transport-equation.cpp
